--- a/_main.scss
+++ b/_main.scss
@@ -3,6 +3,7 @@
     height: 50%;
     display: flex;
     column-gap: 5px;
+    margin-bottom: 5px;
 
 
     .tarjetas
@@ -10,6 +11,12 @@
     height: 100%;
     width: 100%;
     background-color: rgb(171, 28, 28);
+    transition-property: width;
+    transition-duration: 200ms;
     }
 }
 
+.tarjetas:hover{
+    width: 105%;
+    height: 101%;
+}
