--- a/_footer.scss
+++ b/_footer.scss
@@ -15,4 +15,35 @@
     background-color: rgb(172, 172, 200);
     }
 
+
+    .footer-logo img {
+        max-width: 150px;
+      }
+      .footer-heading {
+        font-size: 1.2rem;
+        font-weight: bold;
+        margin-bottom: 1rem;
+      }
+      .footer-social a {
+        color: #f8f9fa;
+        font-size: 1.5rem;
+        margin-right: 1rem;
+        transition: color 0.3s ease;
+      }
+      .footer-social a:hover {
+        color: #ffc107; /* Color hover en redes sociales */
+      }
+      .footer-bottom {
+        border-top: 1px solid rgba(255, 255, 255, 0.2);
+        margin-top: 2rem;
+        padding-top: 1rem;
+        font-size: 0.9rem;
+        text-align: center;
+      }
+
+
+
+
+
+
 }
