--- a/_main.scss
+++ b/_main.scss
@@ -1,16 +1,20 @@
 .medio
 {
+    width: 100%;
     height: 50%;
     display: flex;
-    column-gap: 10px;
-    margin-bottom: 5px;
-
+    flex-wrap: wrap;
+    gap: 1rem;
+    
     .tarjetas
     {
-    height: 100%;
-    width: 100%;
-    transition-property: width;
-    transition-duration: 200ms;
+    flex-basis: 20rem;
+    flex-grow: 999;
+    }
+
+    .tarjetas:hover
+    {
+        height: 370px;
     }
 
     .catalogo
@@ -21,8 +25,4 @@
     }
 }
 
-.tarjetas:hover{
-    width: 105%;
-    height: 101%;
-    
-}
+
