--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .arriba {
   height: 20%;
   display: flex;
@@ -7,6 +6,7 @@
 .arriba .cajaizq {
   width: 50%;
   height: 100%;
+  background-color: green;
 }
 .arriba .cajaizq .banner {
   height: 100%;
@@ -17,85 +17,25 @@
   height: 100%;
 }
 .arriba .cajader .logo {
-  height: 135px;
-  width: 200px;
+  height: 125px;
+  width: 125px;
 }
 
-.navbar {
-  background-color: #ffffff; /* Fondo blanco */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra */
-  padding: 1rem 2rem;
-  transition: background-color 0.3s ease, box-shadow 0.3s ease;
-}
-
-.navbar-brand {
-  font-size: 1.8rem;
-  font-weight: 700;
-  color: #007bff;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  transition: color 0.3s ease;
-}
-
-.navbar-brand:hover {
-  color: #0056b3; /* Color más oscuro en hover */
-}
-
-.navbar-nav .nav-link {
-  font-size: 1rem;
-  margin-left: 1rem;
-  color: #555;
-  font-weight: 500;
-  transition: color 0.3s ease, transform 0.3s ease;
-}
-
-.navbar-nav .nav-link:hover {
-  color: #007bff;
-  transform: translateY(-2px);
-}
-
-.btn-highlight {
-  background-color: #007bff;
-  color: #fff;
-  font-size: 1rem;
-  font-weight: bold;
-  border: none;
-  border-radius: 25px;
-  padding: 0.5rem 1.5rem;
-  transition: background-color 0.3s ease, transform 0.3s ease;
-}
-
-.btn-highlight:hover {
-  background-color: #0056b3;
-  transform: scale(1.1);
-}
-
-.navbar.scrolled {
-  background-color: #f8f9fa; /* Color al hacer scroll */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-@media (max-width: 992px) {
-  .navbar-nav .nav-link {
-    margin: 0.5rem 0;
-  }
-  .btn-highlight {
-    margin-top: 0.5rem;
-  }
-}
 .medio {
-  width: 100%;
   height: 50%;
   display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
+  column-gap: 10px;
+  margin-bottom: 5px;
 }
 .medio .tarjetas {
-  flex-basis: 20rem;
-  flex-grow: 999;
+  height: 100%;
+  width: 100%;
+  transition-property: width;
+  transition-duration: 200ms;
 }
 .medio .tarjetas:hover {
-  height: 370px;
+  width: 105%;
+  height: 101%;
 }
 .medio .catalogo {
   height: 100%;
@@ -115,30 +55,6 @@
   width: 100%;
   height: 80%;
   background-color: rgb(172, 172, 200);
-}
-.abajo .footer-logo img {
-  max-width: 150px;
-}
-.abajo .footer-heading {
-  font-size: 1.2rem;
-  font-weight: bold;
-  margin-bottom: 1rem;
-}
-.abajo .footer-social a {
-  color: #f8f9fa;
-  font-size: 1.5rem;
-  margin-right: 1rem;
-  transition: color 0.3s ease;
-}
-.abajo .footer-social a:hover {
-  color: #ffc107; /* Color hover en redes sociales */
-}
-.abajo .footer-bottom {
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
-  margin-top: 2rem;
-  padding-top: 1rem;
-  font-size: 0.9rem;
-  text-align: center;
 }
 
 /*# sourceMappingURL=estilos.css.map */
