--- a/_main.scss
+++ b/_main.scss
@@ -1,28 +1,42 @@
-.medio
-{
-    width: 100%;
-    height: 50%;
+.main-content {
+    padding: 20px;
+    background-color: #f4f4f4;
+}
+
+.image-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
-    
-    .tarjetas
-    {
-    flex-basis: 20rem;
-    flex-grow: 999;
-    }
+    justify-content: center; /* Centra las imágenes horizontalmente */
+    gap: 20px; /* Espacio entre las imágenes */
+}
 
-    .tarjetas:hover
-    {
-        height: 370px;
-    }
+.image-container img {
+    width: 500px; /* Ancho fijo de las imágenes */
+    height: auto; /* Mantiene la proporción */
+    border-radius: 8px; /* Bordes redondeados */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra suave */
+    transition: transform 0.3s ease; /* Animación suave al pasar el mouse */
+}
 
-    .catalogo
-    {
-        height: 100%;
-        width: 100%;
-        border-radius:20px;
-    }
+.image-container img:hover {
+    transform: scale(1.05); /* Efecto zoom al pasar el mouse */
 }
 
 
+.mid img
+    {
+    border-radius: 8px;
+    width: 100%;
+    height: auto;
+    box-shadow: 0px 0px 30px #000;
+    }
+
+.mid{
+    display: grid;
+    grid-template-columns: 
+    repeat(
+        auto-fit,
+        minmax(260px,1fr)
+    );
+    gap: 32px;
+}
